fix word overflow

--- a/src/scss/components/wordBox.scss
+++ b/src/scss/components/wordBox.scss
@@ -12,8 +12,6 @@
         border: 1px solid rgb(168, 166, 163);
         width: auto;
         overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
         color: #262548;
         font-size: 14px;
         font-weight: 600;
@@ -21,6 +19,12 @@
         margin: 3px;
         padding: 3px;
         line-height: 1;
+
+        p {
+            overflow: hidden;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+        }
     }
 
     .wordBox__trans {
